--- a/core/build.gradle
+++ b/core/build.gradle
@@ -89,8 +89,10 @@ dependencies {
     testImplementation group: 'com.github.stefanbirkner', name: 'system-rules', version: '1.19.0'
     testImplementation group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.11.270'
     testImplementation group: 'org.mock-server', name: 'mockserver-netty', version: '5.6.0'
+    testImplementation group: 'org.mockftpserver', name: 'MockFtpServer', version: '3.1.0'
     testImplementation group: 'com.github.adejanovski', name: 'cassandra-jdbc-wrapper', version: '3.1.0'
     testImplementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-csv', version: '2.13.2'
+    testImplementation group: 'com.github.stefanbirkner', name: 'fake-sftp-server-rule', version: '2.0.1'
 
     configurations.all {
         exclude group: 'org.slf4j', module: 'slf4j-nop'
